added default settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ project(zgame)
 set(CORE core/component.hpp core/entity.cpp core/entity.hpp 
 core/entitymanager.hpp core/entitymanager.cpp core/logger.hpp core/logger.cpp 
 core/object.hpp core/object.cpp core/stddef.hpp core/string.hpp core/string.cpp 
-application/application.hpp application/settings.hpp application/window.hpp)
+application/application.hpp application/application.cpp application/settings.hpp 
+application/window.hpp)
 
 set(SANDBOX tests/main.cpp)
 
